syntax = "proto3";

package raftkv;

service Raft {
  rpc AddNode (AddNodeRequest) returns (AddNodeReply) {}
}

message AddNodeRequest {
  string nodeAddr = 1;
}

message AddNodeReply {
  bool result = 1;
  bool notLeader = 2;
  string leaderGrpcPort = 3;
}
